# Chat-Room

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  dockerfile  makefile  pyproject.toml
.github/workflows/: bumpversion.yml  dockerbuild.yml  google-cloudrun-docker.yml  python-app.yml
app/: bus.py  lifespan.py  main.py  settings.py  tasks.py
app/api/: depends.py  endpoints.py
app/domain/: entities.py  events.py  exceptions.py  notifications.py  tickets.py  types.py
app/infra/: listeners.py  matchers.py  sets.py  streams.py  types.py
app/repos/: __init__.py  repos.py
app/services/: __init__.py  exceptions.py  handlers.py  services.py
assets/: demo.mov
db/: init_db.py  models.py  settings.py
migrations/models/: 0_20231125235754_init.py
tests/: conftest.py  test_api.py  test_entities.py  test_event_bus.py  test_handlers.py  test_listeners.py  test_repos.py  test_services.py  test_sets.py  test_settings.py  test_streams.py  test_tasks.py
